gitops/journiv/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: journiv
  namespace: journiv
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
  hostnames:
    - journal.sanderpeters.cloud
  rules:
    - backendRefs:
        - name: journiv
          port: 80
